
* improve some functions:
	- get.data.R:
		. update the queries regarding evolution of SHiNeMaS structure
		. add query.type = "species"
		. add query.type = "person-info"
		. add query.type = "grand-father"
		. change order of the arguments
		. add error messages and update Rd for filters allowed for each query.type
		. add argument mixrep_to_repro
		. delete query.type = "SL.mix"

	- get.ggplot.R:
		. change argument "display.lables.sex"" to "labels.sex"
		. rename the argument "fuse_g_and_s"" by "merge_g_and_s"
		. default argument for "merge_g_and_s"" is TRUE
		
	- get.table.R:
		. rename the argument "fuse_g_and_s"" by "merge_g_and_s"
		
	- encrypt.data.R:
		. update regarding changes in get.data.R

	- format.data.R:
		. update regarding changes in get.data.R

* add shinemas_tuto.sql in inst/extdata

* vignette:
	- update regarding new version of SHiNeMaS
	- orthograph corrections
	- update for is.get.data.output.R
	- add section "Other information in SHiNeMaS"
	- update appendix A1
	- add appendix A4


shinemas2R 0.9.1 ------------------------------------
-----------------------------------------------------
* Correct bugs in the code

* vignette:
	- update connexion to SHiNeMaS
	- add "use.get.data" argument
	- add network-reproduction-sown to the table regarding ggplot.type for "network-" ggplot.type
	- add ggplot.on to the table regarding ggplot.type for "data-" ggplot.type
	- add example of format.data
	- update code and text regarding correlation group

* get.data.R:
	- add query.type = methods
	- update query.type = seed-lots
	- update correlation group and output for "data-" type
	- add ggplot.type = "network-reproduction-sown"

* get.ggplot.R:
	- correlated_group argument replaces correlated.variables argument
	- add ggplot.type = "network-reproduction-sown"
	- correct bugs on "network-" ggplot.type
	
* get.table.R:
	- correlated_group argument replaces correlated.variables argument

* encrypt.data.R: