@@ -23,6 +23,7 @@ shinemas2R 0.9.2 ------------------------------------
 		. add error messages and update Rd for filters allowed for each query.type
 		. add argument mixrep_to_repro
 		. delete query.type = "SL.mix"
+		. add query.type = "data-mixture-1"
 
 	- get.ggplot.R:
 		. change argument "display.lables.sex"" to "labels.sex"
